// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render additional times correctly 1`] = `
<div>
  <div
    key="The Label0"
  >
    <span
      className="src-modules-entity-components-opening-times-entry__label-additional src-modules-entity-components-opening-times-entry__label"
    >
      The Label
    </span>
    <span
      className="src-modules-entity-components-opening-times-entry__time"
    >
      Time 1
    </span>
  </div>
  <div
    key="The Label1"
  >
    <span
      className="src-modules-entity-components-opening-times-entry__label-additional src-modules-entity-components-opening-times-entry__label"
    />
    <span
      className="src-modules-entity-components-opening-times-entry__time"
    >
      Time 2
    </span>
  </div>
</div>
`;

exports[`should render basic times correctly 1`] = `
<div>
  <div
    key="The Label0"
  >
    <span
      className="src-modules-entity-components-opening-times-entry__label-basic src-modules-entity-components-opening-times-entry__label"
    >
      The Label
    </span>
    <span
      className="src-modules-entity-components-opening-times-entry__time"
    >
      Time 1
    </span>
  </div>
  <div
    key="The Label1"
  >
    <span
      className="src-modules-entity-components-opening-times-entry__label-basic src-modules-entity-components-opening-times-entry__label"
    />
    <span
      className="src-modules-entity-components-opening-times-entry__time"
    >
      Time 2
    </span>
  </div>
</div>
`;

exports[`should render closure times correctly 1`] = `
<div>
  <div
    key="The Label0"
  >
    <span
      className="src-modules-entity-components-opening-times-entry__label-closure src-modules-entity-components-opening-times-entry__label"
    >
      The Label
    </span>
    <span
      className="src-modules-entity-components-opening-times-entry__time"
    >
      Time 1
    </span>
  </div>
  <div
    key="The Label1"
  >
    <span
      className="src-modules-entity-components-opening-times-entry__label-closure src-modules-entity-components-opening-times-entry__label"
    />
    <span
      className="src-modules-entity-components-opening-times-entry__time"
    >
      Time 2
    </span>
  </div>
</div>
`;

exports[`should render no times correctly 1`] = `
<div>
  <span
    className="src-modules-entity-components-opening-times-entry__label-basic src-modules-entity-components-opening-times-entry__label"
  >
    The Label
  </span>
  <span
    className="src-modules-entity-components-opening-times-entry__time"
  >
    Closed
  </span>
</div>
`;

exports[`should render special times correctly 1`] = `
<div>
  <div
    key="The Label0"
  >
    <span
      className="src-modules-entity-components-opening-times-entry__label-special src-modules-entity-components-opening-times-entry__label"
    >
      The Label
    </span>
    <span
      className="src-modules-entity-components-opening-times-entry__time"
    >
      Time 1
    </span>
  </div>
  <div
    key="The Label1"
  >
    <span
      className="src-modules-entity-components-opening-times-entry__label-special src-modules-entity-components-opening-times-entry__label"
    />
    <span
      className="src-modules-entity-components-opening-times-entry__time"
    >
      Time 2
    </span>
  </div>
</div>
`;
